--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,5 +1,8 @@
 FROM docker-registry.default.svc:5000/wwp-test/wp-base
 
+RUN echo "deb http://nginx.org/packages/ubuntu `lsb_release -cs` nginx" > /etc/apt/sources.list.d/nginx.list
+RUN curl -fsSL https://nginx.org/keys/nginx_signing.key | apt-key add -
+
 RUN apt-get -qy update && apt-get -qy install --no-install-recommends \
     gettext-base \
     libcgi-pm-perl \
@@ -8,6 +11,7 @@ RUN apt-get -qy update && apt-get -qy install --no-install-recommends \
     msmtp \
     msmtp-mta \
     nginx \
+    nginx-module-njs \
     php${PHP_VERSION}-fpm \
   && \
     apt-get -qy autoremove && \
