--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -7,6 +7,7 @@ http {
      include /etc/nginx/mime.types;
      default_type application/octet-stream;
 
+     absolute_redirect off;
      server {
         listen 8080;
         listen 8443 ssl;
