--- a/ansible/.interactive-playbooks/main.yml
+++ b/ansible/.interactive-playbooks/main.yml
@@ -13,9 +13,7 @@
 
 - name: WordPress instances
   hosts: |
-    {%- if (ansible_run_tags |
-                          any_known_tag((playbook_dir | dirname) +
-                                        "/roles/wordpress-instance")) -%}
+    {%- if _want_wordpress_inventory -%}
     {# Note: we are twisting the Ansible concept of “hosts” in this play.
      # An inventory entry in the all_wordpresses group is a WordPress
      # instance, rather than a host in the “traditional” sysadmin sense.
@@ -30,6 +28,11 @@
   gather_facts: no    # Ansible facts are useless for this play
   roles:
     - role: ../roles/wordpress-instance
+  vars:
+    _want_wordpress_inventory: >-
+          {{ ansible_run_tags | any_known_tag(_wordpress_instance_role_path) }}
+    _wordpress_instance_role_path: >-
+          {{ (playbook_dir | dirname) + "/roles/wordpress-instance" }}
 
 - name: OpenShift namespaces
   # Like above, members of the all_openshift_namespaces are OpenShift
