[feature] Cloud-centric single entry point for php-fpm and WordPress
In order avoiding hitting NFS at all on queries that ought to be served by WordPress, we want to tweak the initial loading sequence, so that all the file-based initialization that occurs in a “real” WordPress (in particular, locating and loading `wp-config.php`) instead happens out of data that comes from Kubernetes.

- Route all php-fpm requests to the same `/wp/nginx-entrypoint.php` file, which is in charge of loading the correct version of WordPress with the correct parameters
- As `wp-load.php` insists on loading `wp-config.php`, provide an empty file for same in all WordPress versions
- Set all `fastcgi_param`s unconditionally in each request. If php-fpm ends up *not* handling the query, these will simply ignored.
- Decide by regex whether we actually flip the switch (by calling `fastcgi_pass`)

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -27,10 +27,20 @@ RUN sed -i 's|^listen = .*|listen = /run/php-fpm.sock|' /etc/php/${PHP_VERSION}/
 RUN mkdir /var/www/global-error
 COPY global-error /var/www/global-error
 
+# Band-aid for running WordPress outside of its installation directory
+# nginx-entrypoint.php takes care of the setup legwork
+RUN set -e -x;                                                     \
+    for wp in $(find /wp/ -mindepth 1 -maxdepth 1 -type d          \
+                -regextype egrep -regex '.*/[0-9.]+');             \
+    do echo "<?php # This wp-config.php intentionally left blank"  \
+            > $wp/wp-config.php; done
+
 COPY docker-entrypoint.sh /
 RUN chmod a+x /docker-entrypoint.sh
 
 COPY nginx.conf /etc/nginx/nginx.conf.tmpl
+
+COPY nginx-entrypoint.php /wp/
 
 EXPOSE 8080 8443
 
