--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -17,50 +17,46 @@ http {
         ssl_certificate    /etc/nginx/ssl/server.cert;
         ssl_certificate_key    /etc/nginx/ssl/server.key;
 
-        root /srv/$WP_ENV/$host/htdocs;
-        location / {
-                try_files $uri $uri/ =404;
+        root /srv/test/$host/htdocs;
 
-               index index.php;
+        # All the PHP traffic goes through a single entry point. This
+        # avoids stat()s on NFS when we know (through regexes below)
+        # that the query is for WordPress. If, on the other hand, the
+        # query turns out to be for a static file, then all
+        # fastcgi_param directives will have bo effect.
+        fastcgi_param SCRIPT_FILENAME /wp/nginx-entrypoint.php;
+
+        fastcgi_param  QUERY_STRING       $query_string;
+        fastcgi_param  REQUEST_METHOD     $request_method;
+        fastcgi_param  REQUEST_SCHEME     $scheme;
+        fastcgi_param  CONTENT_TYPE       $content_type;
+        fastcgi_param  CONTENT_LENGTH     $content_length;
+
+        fastcgi_param  REQUEST_URI        $request_uri;
+        fastcgi_param  DOCUMENT_URI       $document_uri;
+        fastcgi_param  SERVER_PROTOCOL    $server_protocol;
+        fastcgi_param  HTTPS              $https if_not_empty;
+
+        fastcgi_param  SERVER_SOFTWARE    nginx/$nginx_version;
+
+        fastcgi_param  REMOTE_ADDR        $remote_addr;
+        fastcgi_param  REMOTE_PORT        $remote_port;
+        fastcgi_param  SERVER_ADDR        $server_addr;
+        fastcgi_param  SERVER_PORT        $server_port;
+        fastcgi_param  SERVER_NAME        $server_name;
+
+        fastcgi_param  WP_ENV             www;
+
+        # PHP only, required if PHP was built with --enable-force-cgi-redirect
+        fastcgi_param  REDIRECT_STATUS    200;
+        fastcgi_param HTTP_PROXY '';
+
+        # PHP queries are those with no dot in them, or those that end with
+        # .php:
+        location ~ ^[^.]*$ {
+               fastcgi_pass unix:/run/php-fpm.sock;
         }
-
         location ~ \.php$ {
-               # regex to split $uri to $fastcgi_script_name and $fastcgi_path
-               fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-
-               # Bypass the fact that try_files resets $fastcgi_path_info
-               # see: http://trac.nginx.org/nginx/ticket/321
-               set $path_info $fastcgi_path_info;
-               fastcgi_param PATH_INFO $path_info;
-
-               fastcgi_index index.php;
-
-	       fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-	       fastcgi_param  QUERY_STRING       $query_string;
-	       fastcgi_param  REQUEST_METHOD     $request_method;
-	       fastcgi_param  CONTENT_TYPE       $content_type;
-	       fastcgi_param  CONTENT_LENGTH     $content_length;
-
-	       fastcgi_param  SCRIPT_NAME        $fastcgi_script_name;
-	       fastcgi_param  REQUEST_URI        $request_uri;
-	       fastcgi_param  DOCUMENT_URI       $document_uri;
-	       fastcgi_param  DOCUMENT_ROOT      $document_root;
-	       fastcgi_param  SERVER_PROTOCOL    $server_protocol;
-	       fastcgi_param  REQUEST_SCHEME     $scheme;
-	       fastcgi_param  HTTPS              $https if_not_empty;
-
-	       fastcgi_param  GATEWAY_INTERFACE  CGI/1.1;
-	       fastcgi_param  SERVER_SOFTWARE    nginx/$nginx_version;
-
-	       fastcgi_param  REMOTE_ADDR        $remote_addr;
-	       fastcgi_param  REMOTE_PORT        $remote_port;
-	       fastcgi_param  SERVER_ADDR        $server_addr;
-	       fastcgi_param  SERVER_PORT        $server_port;
-	       fastcgi_param  SERVER_NAME        $server_name;
-
-	       # PHP only, required if PHP was built with --enable-force-cgi-redirect
-	       fastcgi_param  REDIRECT_STATUS    200;
-
                fastcgi_pass unix:/run/php-fpm.sock;
         }
 
