--- a/ansible/roles/wordpress-openshift-namespace/vars/secrets-wwp-test.yml
+++ b/ansible/roles/wordpress-openshift-namespace/vars/secrets-wwp-test.yml
@@ -19,6 +19,7 @@ webhooks:
 build:
   s3_assets:
     endpoint_url: https://s3.epfl.ch/
+    region: us-east-1
     bucket_name: svc0041-c1561ba80625465c2a53f01693922e7c
     # This is a read-only key. See
     # the Makefile at the root of wp-ops for write
