[fix] Group controlling access to AWXes
Because we had a restructuring, we changed the group names in groups. Now we don't have access anymore, WHO WOULDA THUNK IT?

--- a/ansible/roles/awx-instance/tasks/auth.yml
+++ b/ansible/roles/awx-instance/tasks/auth.yml
@@ -44,4 +44,4 @@
         AUTH_LDAP_USER_FLAGS_BY_GROUP:
           is_superuser:
             - cn=c2c,ou=groups,o=epfl,c=ch
-            - cn=idev-fsd-wordpress,ou=groups,o=epfl,c=ch
+            - cn=isas-fsd-wordpress,ou=groups,o=epfl,c=ch
