--- a/docker/monitoring-wpprobe/package.json
+++ b/docker/monitoring-wpprobe/package.json
@@ -15,7 +15,7 @@
     "WordPress",
     "menus"
   ],
-  "author": "IDEV-FSD <idev-fsd@groupes.epfl.ch>",
+  "author": "ISAS-FSD <isas-fsd@groupes.epfl.ch>",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/epfl-si/wp-ops/issues"
