[feature] Hermetic build of JS properties

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -132,6 +132,8 @@ RUN set -e -x; for wp in /wp/*; do                                         \
      | xargs -t -i curl -o tinymce-advanced.zip {} ;                       \
   rm -rf wp-content/plugins/tinymce-advanced;                              \
   (cd wp-content/plugins; unzip ../../tinymce-advanced.zip);               \
+  (cd wp-content/plugins/wp-gutenberg-epfl;                                \
+      rm -rf build; npm i; npm run build; rm -rf node_modules);            \
   rm tinymce-advanced.zip;                                                 \
   done
 
