[fix] Merge Web and JNLP under the same Service
This lets us use the default configuration for the in-Jenkins “cloud” object, with only (. Not sure how this was working before; but then again, since I deleted and recreated the “cloud” object without taking a backup first, I can't really complain)

- Be sure to let the Route know which port to use (the Web port), lest it ... (checks “⚠” hover text in OpenShift dashboard) round-robins over both ports‽

--- a/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
@@ -38,32 +38,27 @@
         # this ImageStream (and pass it to the Kubernetes plug-in):
         role: jenkins-slave
 
-- name: Jenkins services
-  with_items:
-    - name: jenkins
-      portName: web
-      servicePort: 80
-      targetPort: 8080
-    - name: jenkins-jnlp
-      portName: agent
-      servicePort: 5000
-      targetPort: 5000
+- name: Jenkins service
   openshift:
     state: latest
     apiVersion: v1
     kind: Service
     metadata:
-      name: "{{ item.name }}"
+      name: jenkins
       namespace: "{{ openshift_namespace }}"
       labels:
         app: jenkins
     spec:
       type: ClusterIP
       ports:
-        - name: "{{ item.portName }}"
-          port: "{{ item.servicePort }}"
+        - name: "web"
+          port: 80
+          targetPort: 8080
           protocol: TCP
-          targetPort: "{{ item.targetPort }}"
+        - name: "jnlp"
+          port: 5000
+          targetPort: 5000
+          protocol: TCP
       selector:
         app: jenkins
         deploymentconfig: jenkins
@@ -207,6 +202,8 @@
         app: jenkins
     spec:
       host: "{{ ci_jenkins_public_hostname }}"
+      port:
+        targetPort: web
       tls:
         insecureEdgeTerminationPolicy: Redirect
         termination: edge
