--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -89,6 +89,17 @@
   tags:
     - sorryserver
 
+- name: "Web2010"
+  include_tasks:
+    file: web2010.yml
+    apply:
+      tags:
+        - web2010
+  tags:
+    - web2010
+    - web2010.rebuild
+    - web2010.image.promote
+
 # A reminder that monitoring pod on wwp is expecting a pushgateway on wwp-infra
 - debug:
     msg: "Please be sure to deploy the pushgateway on wwp-infra, `./ansible/wpsible -t awx.pushgateway -l awx-wwp-infra --prod`"
