Change how we verify which polylang we need, depending on the wp_version_lineage variable

--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -221,14 +221,16 @@
   tags: wp.plugins.pdf
 
 - name: Polylang for 5.5 plugin
+  when: wp_version_lineage < 5.6
   wordpress_plugin:
-    name: polylang_2_9_2
+    name: polylang
     state:
       - symlinked
       - active
     from: https://downloads.wordpress.org/plugin/polylang.2.9.2.zip
 
 - name: Polylang plugin
+  when : wp_version_lineage >= 5.6
   wordpress_plugin:
     name: polylang
     state:
