Allow to specify a conditional plugin install, based on the current wp version

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -113,8 +113,9 @@ ADD install-plugins-and-themes.py clearstatcache-wp-import.patch /tmp/
 # Get all plugins and themes (in "auto" mode) out of the Ansible
 # `plugins.yml` file:
 ARG INSTALL_AUTO_FLAGS
-RUN set -e -x; for wp in /wp/*; do cd $wp ;                              \
-        /tmp/install-plugins-and-themes.py auto ${INSTALL_AUTO_FLAGS};   \
+RUN set -e -x; for wp in /wp/*; do cd $wp ;                                                      \
+        wpversion=$(echo ${wp#"/wp/"});                                                          \
+        /tmp/install-plugins-and-themes.py auto ${INSTALL_AUTO_FLAGS} --wp-version ${wpversion}; \
     done
 
 # Special treatment for tinymce-advanced, whose version scheme follows
