[feature] use `--no-fund` where possible

--- a/docker/monitoring-wpprobe/Dockerfile
+++ b/docker/monitoring-wpprobe/Dockerfile
@@ -4,7 +4,7 @@ FROM public.ecr.aws/bitnami/node:13
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --no-fund
 
 COPY index.js index.js
 EXPOSE 8080
