--- a/docker/disk-usage-statistics/Dockerfile
+++ b/docker/disk-usage-statistics/Dockerfile
@@ -4,7 +4,7 @@ FROM public.ecr.aws/bitnami/node:14
 WORKDIR /usr/src/app
 
 COPY package*.json tsconfig.json ./
-RUN npm install
+RUN npm install --no-fund
 
 COPY index.ts index.ts
 CMD [ "node", "-r", "ts-node/register", "index.ts" ]
