Use wp_version_lineage (the one we want) instead of the fact wp_current_version (the one that is installed) for plugin selection

--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -83,7 +83,7 @@
     - wp.plugins.mu
 
 - name: Blocks white-list (must-use plugin)
-  when: wp_current_version is version('5.6', '<')
+  when: wp_version_lineage is version('5.6', '<')
   wordpress_plugin:
     name: EPFL_block_white_list
     is_mu: yes
@@ -93,7 +93,7 @@
     - wp.plugins.mu
 
 - name: Blocks white-list (must-use plugin)
-  when: wp_current_version is version('5.6', '>=')
+  when: wp_version_lineage is version('5.6', '>=')
   wordpress_plugin:
     name: EPFL_block_white_list
     is_mu: yes
@@ -232,7 +232,7 @@
   tags: wp.plugins.pdf
 
 - name: Polylang for WP 5.5 plugin
-  when: wp_current_version is version('5.6', '<')
+  when: wp_version_lineage is version('5.6', '<')
   wordpress_plugin:
     name: polylang
     state:
@@ -241,7 +241,7 @@
     from: https://downloads.wordpress.org/plugin/polylang.2.9.2.zip
 
 - name: Polylang plugin
-  when: wp_current_version is version('5.6', '>=')
+  when: wp_version_lineage is version('5.6', '>=')
   wordpress_plugin:
     name: polylang
     state:
@@ -352,7 +352,7 @@
     from: https://github.com/epfl-si/wp-plugin-epfl-remote-content
 
 - name: EPFL Gutenberg plugin
-  when: wp_current_version is version('5.6', '<')
+  when: wp_version_lineage is version('5.6', '<')
   wordpress_plugin:
     name: wp-gutenberg-epfl
     state:
@@ -361,7 +361,7 @@
     from: https://github.com/epfl-si/wp-gutenberg-epfl
 
 - name: EPFL Gutenberg plugin
-  when: wp_current_version is version('5.6', '>=')
+  when: wp_version_lineage is version('5.6', '>=')
   wordpress_plugin:
     name: wp-gutenberg-epfl
     state:
@@ -527,7 +527,7 @@
     from: https://github.com/epfl-si/wp-plugin-epfl-courses-se
 
 - name: WPForms plugin v1.6.x
-  when: wp_current_version is version('5.6', '<')
+  when: wp_version_lineage is version('5.6', '<')
   wordpress_plugin:
     name: wpforms
     state: "{{ plugins_for_wpforms_category }}"
@@ -536,7 +536,7 @@
     - wp.plugins.wpforms
 
 - name: WPForms plugin v1.7.x
-  when: wp_current_version is version('5.6', '>=')
+  when: wp_version_lineage is version('5.6', '>=')
   wordpress_plugin:
     name: wpforms
     state: "{{ plugins_for_wpforms_category }}"
@@ -545,7 +545,7 @@
     - wp.plugins.wpforms
 
 - name: WPForms surveys & polls add-on v1.6.0
-  when: wp_current_version is version('5.6', '<')
+  when: wp_version_lineage is version('5.6', '<')
   wordpress_plugin:
     name: wpforms-surveys-polls
     state: "{{ plugins_for_wpforms_surveys_polls_category }}"
@@ -554,7 +554,7 @@
     - wp.plugins.wpforms-surveys-polls
 
 - name: WPForms surveys & polls add-on v1.7.0
-  when: wp_current_version is version('5.6', '>=')
+  when: wp_version_lineage is version('5.6', '>=')
   wordpress_plugin:
     name: wpforms-surveys-polls
     state: "{{ plugins_for_wpforms_surveys_polls_category }}"
