Add a way to select a specific branch when getting a Plugin from Github

--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -371,7 +371,8 @@
     state:
       - symlinked
       - active
-    from: https://github.com/epfl-si/wp-gutenberg-epfl/tree/update/5.9
+    from: https://github.com/epfl-si/wp-gutenberg-epfl
+    branch: update/5.9
 
 - name: EPFL Menus plugin
   wordpress_plugin:
