[fix] Watch *all* cascading builds (not just `httpd`)

--- a/ansible/roles/wordpress-openshift-namespace/templates/Jenkinsfile
+++ b/ansible/roles/wordpress-openshift-namespace/templates/Jenkinsfile
@@ -96,7 +96,7 @@ spec:
 
               def wpBaseBuild = wpbase.startBuild()
               watchBuilds(wpBaseBuild)
-              def otherBuilds = getTriggeredBuilds(wpBaseBuild)
+              def otherBuilds = getTriggeredBuilds(wpbase)
               watchBuilds(otherBuilds)
             }  // openshift.withProject
           }  // openshift.withCluster
