[improve] Use a file-based secret
`phpinfo()` is bad news when your passwords are in the environment.

- Use autoconf-style marker `@@SERVICE_WWP_NOREPLY_PASSWORD@@` to avoid inadvertent shell-based substitution (even though experience suggests that msmtp doesn't do that in plain `password`)
- `sed` that from the entrypoint script

--- a/ansible/roles/wordpress-openshift-namespace/tasks/k8s-objects-httpd.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/k8s-objects-httpd.yml
@@ -81,9 +81,6 @@
           - env:
             - name: WP_ENV
               value: "{{ dc.name }}"
-            envFrom:
-              - secretRef:
-                  name: smtp-password
 
             # image will be set from the imageStream
             imagePullPolicy: Always
@@ -115,6 +112,8 @@
               name: "webservices-logs-{{ dc.name }}"
             - mountPath: /call_logs
               name: "call-logs-{{ dc.name }}"
+            - mountPath: /mnt/smtp-secret
+              name: smtp-secret
           - image: docker-registry.default.svc:5000/{{ openshift_namespace }}/collectd:latest
             imagePullPolicy: Always
             name: "collectd-{{ dc.name }}"
@@ -157,6 +156,9 @@
             name: "webservices-logs-{{ dc.name }}"
           - emptyDir: {}
             name: "call-logs-{{ dc.name }}"
+          - name: smtp-secret
+            secret:
+              secretName: smtp-password   # Down below
 
       triggers:
       - type: ImageChange
